[package]
name = "trailsense-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1.44"
thiserror = "2.0.17"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono", "derive", "macros"] }
dotenvy = "0.15.7"
utoipa-axum = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
